--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="app_name">Time Tracker</string>
     <string name="facebook_app_id">314197574010434</string>
     <string name="fb_login_protocol_scheme">fb314197574010434</string>
 </resources>
